--- a/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwn.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwn.html.twig
@@ -23,9 +23,23 @@
 {% endif %}
 {% endspaceless %}
 </h4>
+    {% if detailStatistic == 1 %}
+        <button class="btn btn-success btn-xs" type="button">
+            {{ __('Answers') }} <span class="badge">{{ item.countAnswers }}</span>
+        </button> 
+    {% endif %}
     </div>
     <div class="col-md-8">
         {{ __('Last answer') }}:
+        {% if item.last.parent is not null %}
+            {% set itemLink = item.last.parent.id %}
+            {% set itemText = item.last.text|truncate(30) %}
+        {% else %}
+            {% set itemLink = item.last.id %}
+            {% set itemText = item.last.title %}
+        {% endif %}
+        {% if item.last %}<span class="last-posting"><a href="{{ path('muboardmodule_posting_display', {'id': itemLink }) }}">{{ itemText }}</a><br />{{ __('by') }}
+        <span class="posting-avatar">{{ userAvatar(item.last.createdBy.getUid(), {rating: 'g'}) }}</span> {% set profileLink = item.last.createdBy.getUid()|profileLinkByUserId() %} {{ profileLink|raw }}<br />{{ __('on') }}  {{ item.createdDate|localizeddate('medium', 'short')}} {% else %}{{ __('No posting available') }}{% endif %}
     </div>
     </div>
 
