--- a/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
@@ -10,7 +10,7 @@
 {% if items|default and items|length > 0 %}
 <div class="list-group muboardmodule-related-item-list forum">
 {% for item in items %}
-    <div class="col-md-12">
+    <div class="col-md-12 children">
     <div class="col-md-4">
         <div class="children-include-user">
             {{ include('@MUBoardModule/Helper/includeStandardFieldsDisplay2.html.twig', {obj: item}) }}
