--- a/MU/BoardModule/Resources/views/Posting/edit.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/edit.html.twig
@@ -69,25 +69,34 @@
             {% if numberFiles == 1 or numberFiles == 2 or numberFiles == 3 %}          
             {{ form_row(form.firstFile) }}
             {% endif %}            
-            {% if numberFiles == 2 or numberFiles == 3 %}   
+            {% if numberFiles <= 1 %}
+            <div class="hidden">
+            {% endif %}   
             {{ form_row(form.secondFile) }}
+            {% if numberFiles <= 1 %}
+            </div>
             {% endif %}            
-            {% if numberFiles == 3 %}   
+            {% if numberFiles <= 2 %}  
+            <div class="hidden">
+            {% endif %}   
             {{ form_row(form.thirdFile) }}
+            {% if numberFiles <= 2 %} 
+            </div>
             {% endif %}            
             {% if files == 0 %}
                 </div>
             {% endif %}            
         </fieldset>
-        
+        <div class="hidden">
         {{ include(
             '@MUBoardModule/Posting/includeSelectOne.html.twig',
-            {group: 'posting', alias: 'parent', aliasReverse: 'children', mandatory: false, idPrefix: 'boardPosting_Parent', linkingItem: posting, displayMode: 'choices'}
+            {group: 'posting', heading: __('Parent'), alias: 'parent', mandatory: false, idPrefix: 'boardPosting_Parent', linkingItem: posting, displayMode: 'choices'}
         ) }}
         {{ include(
             '@MUBoardModule/Forum/includeSelectEditOne.html.twig',
-            {group: 'posting', alias: 'forum', aliasReverse: 'posting', mandatory: false, idPrefix: 'boardPosting_Forum', linkingItem: posting, displayMode: 'choices'}
+            {group: 'posting', heading: __('Forum'), alias: 'forum', mandatory: false, idPrefix: 'boardPosting_Forum', linkingItem: posting, displayMode: 'choices'}
         ) }}
+        </div>
         {% if mode != 'create' %}
             {{ include('@MUBoardModule/Helper/includeStandardFieldsEdit.html.twig', {obj: posting}) }}
         {% endif %}
@@ -115,19 +124,15 @@
             </fieldset>
         {% endif %}
         
-        {# include return control #}
-        {% if mode == 'create' %}
-            <fieldset>
-                <legend>{{ __('Return control') }}</legend>
-                {{ form_row(form.repeatCreation) }}
-            </fieldset>
-        {% endif %}
         
         {# include possible submit actions #}
         <div class="form-group form-buttons">
             <div class="col-sm-offset-3 col-sm-9">
                 {% for action in actions %}
                     {{ form_widget(attribute(form, action.id)) }}
+                    {% if mode == 'create' and action.id == 'submit' and form.submitrepeat is defined %}
+                        {{ form_widget(attribute(form, 'submitrepeat')) }}
+                    {% endif %}
                 {% endfor %}
                 {{ form_widget(form.reset) }}
                 {{ form_widget(form.cancel) }}
@@ -135,12 +140,10 @@
         </div>
         {{ form_end(form) }}
         {% set hookId = mode != 'create' ? posting.id : null %}
-        {% set hooks = notifyDisplayHooks(eventName='muboardmodule.ui_hooks.postings.form_edit', id=hookId) %}
+        {% set hooks = notifyDisplayHooks(eventName='muboardmodule.ui_hooks.postings.form_edit', id=hookId, outputAsArray=true) %}
         {% if hooks is iterable and hooks|length > 0 %}
-            <h3>{{ __('Hooks') }}</h3>
-            {% for providerArea, hook in hooks if providerArea != 'provider.scribite.ui_hooks.editor' %}
-                <h4>{{ providerArea }}</h4>
-                {{ hook }}
+            {% for area, hook in hooks %}
+                <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook|raw }}</div>
             {% endfor %}
         {% endif %}
         
@@ -148,11 +151,20 @@
 {% endblock %}
 {% block footer %}
     {{ parent() }}
-    {% set editImage = '<span class="fa fa-pencil-square-o"></span>' %}
-    {% set removeImage = '<span class="fa fa-trash-o"></span>' %}
     {% set formInitScript %}
         <script type="text/javascript">
         /* <![CDATA[ */
+            var mUBoardInlineEditHandlers = [];
+            var mUBoardEditHandler = null;
+            mUBoardEditHandler = {
+                alias: 'forum',
+                prefix: 'boardPosting_ForumSelectorDoNew',
+                moduleName: 'MUBoardModule',
+                objectType: 'forum',
+                inputType: 'select-single',
+                windowInstanceId: null
+            };
+            mUBoardInlineEditHandlers.push(mUBoardEditHandler);
             
             ( function($) {
                 $(document).ready(function() {
@@ -160,6 +172,7 @@
                     {% if form.moderationSpecificCreator is defined %}
                         initUserLiveSearch('muboardmodule_posting_moderationSpecificCreator');
                     {% endif %}
+                    mUBoardInitRelationHandling('forum', 'forum', 'boardPosting_Forum', true, 'select-single', '{{ path('muboardmodule_forum_' ~ routeArea ~ 'edit') }}');
                     mUBoardInitEditForm('{{ mode }}', '{% if mode != 'create' %}{{ posting.id }}{% endif %}');
                     mUBoardInitUploadField('muboardmodule_posting_firstImage_firstImage');
                     mUBoardInitUploadField('muboardmodule_posting_secondImage_secondImage');
