--- a/MU/BoardModule/Resources/views/Forum/Admin/includeSelectOne.html.twig
+++ b/MU/BoardModule/Resources/views/Forum/Admin/includeSelectOne.html.twig
@@ -18,9 +18,9 @@
             {{ form_row(attribute(subFields, 'pos')) }}
         </fieldset>
     {% elseif displayMode == 'choices' %}
-        {{ form_row(attribute(form, alias)) }}
+        {{ form_row(attribute(form, alias), {required: mandatory}) }}
     {% elseif displayMode == 'autocomplete' %}
-        {{ form_row(attribute(form, alias)) }}
+        {{ form_row(attribute(form, alias), {required: mandatory}) }}
         <div class="muboardmodule-relation-leftside">
             {{ include(
                 '@MUBoardModule/Forum/Admin/includeSelectItemListOne.html.twig',
