--- a/MU/BoardModule/Resources/views/Rank/includeSelectOne.html.twig
+++ b/MU/BoardModule/Resources/views/Rank/includeSelectOne.html.twig
@@ -21,9 +21,9 @@
             {{ form_row(attribute(subFields, 'special')) }}
         </fieldset>
     {% elseif displayMode == 'choices' %}
-        {{ form_row(attribute(form, alias)) }}
+        {{ form_row(attribute(form, alias), {required: mandatory}) }}
     {% elseif displayMode == 'autocomplete' %}
-        {{ form_row(attribute(form, alias)) }}
+        {{ form_row(attribute(form, alias), {required: mandatory}) }}
         <div class="muboardmodule-relation-leftside">
             {{ include(
                 '@MUBoardModule/Rank/Admin/includeSelectItemListOne.html.twig',
