--- a/MU/BoardModule/Resources/views/Config/config.html.twig
+++ b/MU/BoardModule/Resources/views/Config/config.html.twig
@@ -11,13 +11,21 @@
         {{ form_start(form) }}
         <div class="zikula-bootstrap-tab-container">
             <ul class="nav nav-tabs">
-                {% set tabTitle = __('Moderation') %}
+                {% set tabTitle = __('General') %}
                 <li role="presentation" class="active">
                     <a id="vars1Tab" href="#tab1" title="{{ tabTitle|e('html_attr') }}" role="tab" data-toggle="tab">{{ tabTitle }}</a>
                 </li>
-                {% set tabTitle = __('List views') %}
+                {% set tabTitle = __('Layout') %}
                 <li role="presentation">
                     <a id="vars2Tab" href="#tab2" title="{{ tabTitle|e('html_attr') }}" role="tab" data-toggle="tab">{{ tabTitle }}</a>
+                </li>
+                {% set tabTitle = __('Moderation') %}
+                <li role="presentation">
+                    <a id="vars3Tab" href="#tab3" title="{{ tabTitle|e('html_attr') }}" role="tab" data-toggle="tab">{{ tabTitle }}</a>
+                </li>
+                {% set tabTitle = __('List views') %}
+                <li role="presentation">
+                    <a id="vars4Tab" href="#tab4" title="{{ tabTitle|e('html_attr') }}" role="tab" data-toggle="tab">{{ tabTitle }}</a>
                 </li>
                 {% set tabTitle = __('Images') %}
                 <li role="presentation" class=" dropdown">
@@ -39,7 +47,7 @@
                 </li>
                 {% set tabTitle = __('Integration') %}
                 <li role="presentation">
-                    <a id="vars4Tab" href="#tab4" title="{{ tabTitle|e('html_attr') }}" role="tab" data-toggle="tab">{{ tabTitle }}</a>
+                    <a id="vars6Tab" href="#tab6" title="{{ tabTitle|e('html_attr') }}" role="tab" data-toggle="tab">{{ tabTitle }}</a>
                 </li>
                 {% set tabTitle = __('Workflows') %}
                 <li role="presentation">
@@ -50,6 +58,41 @@
             {{ form_errors(form) }}
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane fade in active" id="tab1" aria-labelledby="vars1Tab">
+                    {% set tabTitle = __('General') %}
+                    <fieldset>
+                        <legend>{{ tabTitle }}</legend>
+                    
+                        <p class="alert alert-info">{{ __('Here you can manage all basic settings for this application.') }}</p>
+                    
+                        {{ form_row(form.uploadImages) }}
+                        {{ form_row(form.allowedSizeOfImages) }}
+                        {{ form_row(form.numberImages) }}
+                        {{ form_row(form.uploadFiles) }}
+                        {{ form_row(form.allowedSizeOfFiles) }}
+                        {{ form_row(form.numberFiles) }}
+                        {{ form_row(form.editPostings) }}
+                        {{ form_row(form.editTime) }}
+                        {{ form_row(form.latestPostings) }}
+                        {{ form_row(form.sortingCategories) }}
+                        {{ form_row(form.sortingForums) }}
+                        {{ form_row(form.sortingPostings) }}
+                        {{ form_row(form.standardIcon) }}
+                        {{ form_row(form.specialIcon) }}
+                    </fieldset>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="tab2" aria-labelledby="vars2Tab">
+                    {% set tabTitle = __('Layout') %}
+                    <fieldset>
+                        <legend>{{ tabTitle }}</legend>
+                    
+                    
+                        {{ form_row(form.iconSet) }}
+                        {{ form_row(form.template) }}
+                        {{ form_row(form.showStatisticInDetails) }}
+                        {{ form_row(form.showStatisticOnBottom) }}
+                    </fieldset>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="tab3" aria-labelledby="vars3Tab">
                     {% set tabTitle = __('Moderation') %}
                     <fieldset>
                         <legend>{{ tabTitle }}</legend>
@@ -59,7 +102,7 @@
                         {{ form_row(form.moderationGroupForPostings) }}
                     </fieldset>
                 </div>
-                <div role="tabpanel" class="tab-pane fade" id="tab2" aria-labelledby="vars2Tab">
+                <div role="tabpanel" class="tab-pane fade" id="tab4" aria-labelledby="vars4Tab">
                     {% set tabTitle = __('List views') %}
                     <fieldset>
                         <legend>{{ tabTitle }}</legend>
@@ -155,7 +198,7 @@
                         {{ form_row(form.thumbnailHeightRankUploadImageEdit) }}
                     </fieldset>
                 </div>
-                <div role="tabpanel" class="tab-pane fade" id="tab4" aria-labelledby="vars4Tab">
+                <div role="tabpanel" class="tab-pane fade" id="tab6" aria-labelledby="vars6Tab">
                     {% set tabTitle = __('Integration') %}
                     <fieldset>
                         <legend>{{ tabTitle }}</legend>
@@ -210,6 +253,8 @@
             ( function($) {
                 $(document).ready(function() {
                     mUBoardInitEditForm('edit', '1');
+                    mUBoardInitUploadField('muboardmodule_appsettings_standardIcon_standardIcon');
+                    mUBoardInitUploadField('muboardmodule_appsettings_specialIcon_specialIcon');
                 });
             })(jQuery);
         /* ]]> */
