--- a/MU/BoardModule/Resources/views/Helper/includeStandardFieldsDisplay2.html.twig
+++ b/MU/BoardModule/Resources/views/Helper/includeStandardFieldsDisplay2.html.twig
@@ -22,7 +22,7 @@
         {% set counter = 0 %}
         {% set icon = getModVar('MUBoardModule', 'standardIcon' ) %}
         {% for i in 1..rankAmount %}
-            <img src="../../{{ icon }}" />
+            {{ icon|raw }}
         {% endfor %}<br />
         Last visit: {{ obj.user.lastVisit|localizeddate('medium', 'short') }}
     </div>
