--- a/MU/BoardModule/Resources/views/Posting/display.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/display.html.twig
@@ -36,7 +36,7 @@
                 {% set counter = 0 %}
                 {% set icon = getModVar('MUBoardModule', 'standardIcon' ) %}
                 {% for i in 1..rankAmount %}
-                    <img src="../../{{ icon }}" />
+                    {{ icon|raw }}
                 {% endfor %}
                 </div>
                 </div>
