--- a/MU/BoardModule/Resources/public/css/custom.css
+++ b/MU/BoardModule/Resources/public/css/custom.css
@@ -30,7 +30,6 @@
 .posting-display-content {
 	background: #ddd;
 	border-radius: 5px;
-	float: left;
 	width: 100%;
 }
 
@@ -80,6 +79,12 @@
 	font-size: 0.8em;
 }
 
+/***********POSTING****************/
+
+.muboard-user-posting-content-text {
+	padding: 15px;
+}
+
 .last-posting {
 	font-size: 0.85em;
 	display: block;
@@ -99,6 +104,9 @@
 
 .children {
 	border-bottom: 3px solid #c0c0c0;
+	background-color: #eee;
+	margin: 5px 0 0 0;
+	border-radius: 5px;
 }
 
 .move-forum .fa-bars {
